# Waterbase

./: .gitgnore  .gitignore  README.md  package.json  save.json
.github/workflows/: rust test.yml  rust.yml
libaries/cpp/: Makefile
libaries/cpp/src/cpp/: multiplayer.cpp  requests.cpp  waterbase.cpp
libaries/cpp/src/include/: raw.h  requests.h  waterbase.h
libaries/tests/cpp/: .gitignore  Makefile
libaries/tests/cpp/src/: main.cpp
libaries/tests/rust/src/: main.rs
libaries/tests/ts/: package.json  pnpm-lock.yaml  tsconfig.json
libaries/tests/ts/src/: main.ts
libaries/ts/: package.json
libaries/ts/src/: index.ts  raw.ts
libaries/ts/src/specialized/: index.ts  types.ts
libaries/ts/src/specialized/multiplayer/: player.ts  positions.ts
libraries/cpp/src/cpp/: raw.cpp
libraries/cpp/src/include/: multiplayer.h
libraries/rust/: Cargo.toml
libraries/rust/src/: lib.rs
libraries/tests/rust/: Cargo.toml  Makefile
libraries/tests/rust/src/: main.rs
libraries/tests/ts/: package.json
libraries/ts/: package-lock.json
libraries/ts/src/: raw.ts
libraries/ts/src/specialized/multiplayer/: index.ts  multiplayer.ts
server/: .gitignore  config.json  package.json  pnpm-lock.yaml  tsconfig.json
server/src/: authentication.ts  config.ts  database.ts  main.ts  persistence.ts  server.ts
src/: authentication.ts  main.ts  persistance.ts  server.ts  utils.ts  version.ts
